fix: increase top-padding of main index container on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,7 +119,7 @@ a:hover {
 
 @media (max-width: 768px) {
   .container {
-    padding: 3rem 1.25rem;
+    padding: 5rem 1.25rem;
   }
 }
 
